--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pyrite Classics</title>
+    <title>Jilova Studios</title>
   </head>
   <body>
     <div id="root"></div>
