--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="Movie Production Organization's official website."
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jilova Studios</title>
